--- a/exercises/module2_Templates/templates/index5.html
+++ b/exercises/module2_Templates/templates/index5.html
@@ -2,9 +2,8 @@
 
 {% block content %}
 <ul>
-	<h1>{{title}}</h1>
-{% for p in paragraph %}
-	{{p}}
+{% for a in person %}
+<li>{{a}}</li>
 {% endfor %}
 </ul>
 {% endblock %}
