--- a/exercises/module2_Templates/templates/index.html
+++ b/exercises/module2_Templates/templates/index.html
@@ -5,4 +5,5 @@
   </head>
   <body>
         <h1>Hello Everyone</h1>
+        <a href = {{url_for('aboutus')}}>Click here to About Us</a>
   </body>
