--- a/exercises/module2_Templates/templates/index4.html
+++ b/exercises/module2_Templates/templates/index4.html
@@ -1,9 +1,17 @@
 {% extends "layout.html" %}
 
 {% block content %}
-{% if fruit == "apple" %}
+<!-- {% if fruit == "apple" %}
   <p>Thanks. I love apple!</p>
 {% else %}
   <p>Oh..where is my apple!</p>
+{% endif %} -->
+
+<title>Hello from Flask</title>
+{% if name %}
+  <h1>Hello {{ name }}!</h1>
+{% else %}
+  <h1>Hello, World!</h1>
 {% endif %}
+
 {% endblock %}
